@@ -58,6 +58,7 @@
 		<setting type="sep"/>
 		<setting id="general.audio" type="enum" label="40314" default="40315" lvalues="40315|40316" />
 		<setting id="general.source" type="labelenum" label="40330" default="Sub" values="Dub|Sub|Both" />
+		<setting id="general.dubsort" type="bool" label="40333" default="false" visible="eq(-1,Both)" />
 		<setting id="general.subtitles" type="bool" label="40427" default="false" />
 
 		<!-- Next Episode Dialog -->
@@ -87,7 +88,6 @@
 		<!-- Source Sorting -->
 		<setting type="lsep" label="40331"/>
 		<setting id="general.sortsources" type="enum" label="40332" values="Torrents|Embeds" default="0" />
-		<setting id="general.dubsort" type="bool" label="40333" default="false" />
 		<!-- Search Filtering -->
 		<setting type="lsep" label="40409"/>
 		<setting id="search.adult" type="bool" label="40410" default="false" />
